--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -586,6 +586,9 @@
     <string name="lockscreen_solid_units_count_title">Solid lines count</string>
     <string name="lockscreen_solid_fudge_factor_title">Sanity level</string>
     <string name="lockscreen_solid_units_opacity_title">Solid lines opacity</string>
+    <!-- Ambient visualizer -->
+    <string name="ambient_visualizer_title">Ambient visualizer</string>
+    <string name="ambient_visualizer_summary">Shows the visualization bars also on ambient display (but less opaque)</string>
 
     <!-- Breathing Notifications -->
     <string name="breathing_notifications_category">Breathing Notifications</string>
