--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -645,6 +645,7 @@
         <item>@string/battery_percentage_next</item>
         <item>@string/battery_percentage_inside</item>
         <item>@string/battery_percentage_estimate</item>
+        <item>@string/battery_percentage_percentage_estimate</item>
     </string-array>
 
     <string-array name="qs_battery_mode_values" translatable="false">
@@ -652,6 +653,7 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <!-- Status bar logo position -->
