[2/3] Blissify: custom qs tile rows
Change-Id: I4d4676540efbff785692bc7dd41d8410e983cec6

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -815,4 +815,20 @@
         <item>6</item>
     </string-array>
 
+    <string-array name="qs_tile_rows_entries" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="qs_tile_rows_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
 </resources>
