--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -721,7 +721,8 @@
     <string name="notification_guts_kill_app_button_title">Kill app button</string>
     <string name="notification_guts_kill_app_button_summary">Show a kill app button in the notification\'s longpress menu</string>
 
-    <!-- QS coloumns -->
+    <!-- QS tile layout -->
     <string name="qs_tile_columns_title">Quick settings tile columns</string>
+    <string name="qs_tile_rows_title">Quick settings tile rows</string>
 
 </resources>
