Enable artwork Blur level only when art filter is set to blur
* even though it works all the time , lets set it only on blur to avoid confusion

Change-Id: I1a91505bb345b466b47bee52ac6c843816b1652e
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/lockscreen_visualizer.xml
+++ b/res/xml/lockscreen_visualizer.xml
@@ -50,7 +50,7 @@
         android:max="30000"
         settings:min="200"
         settings:interval="200"
-        settings:units="@string/unit_milliseconds"
+        settings:units="ms"
         android:dependency="lockscreen_lavalamp_enabled"/>
 
     <com.bliss.support.preferences.SecureSettingSeekBarPreference
