--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -101,6 +101,12 @@
         android:key="lockscreen_media_category"
         android:title="@string/lockscreen_media_category" >
 
+    <lineageos.preference.LineageSecureSettingSwitchPreference
+        android:key="lockscreen_media_metadata"
+        android:icon="@drawable/ic_display_media_cover_art"
+        android:title="@string/lockscreen_media_art_title"
+        android:defaultValue="true" />
+
      <com.bliss.support.preferences.SecureSettingListPreference
         android:key="lockscreen_albumart_filter"
         android:icon="@drawable/ic_display_media_cover_art"
@@ -110,12 +116,6 @@
         android:dependency="lockscreen_media_metadata"
         android:defaultValue="0" />
 
-    <lineageos.preference.LineageSecureSettingSwitchPreference
-        android:key="lockscreen_media_metadata"
-        android:icon="@drawable/ic_display_media_cover_art"
-        android:title="@string/lockscreen_media_art_title"
-        android:defaultValue="true" />
-
     <com.bliss.support.preferences.CustomSeekBarPreference
         android:key="lockscreen_media_blur"
         android:icon="@drawable/ic_media_art_blur"
@@ -123,6 +123,7 @@
         android:summary="@string/lockscreen_media_blur_summary"
         android:max="2500"
         settings:min="1"
+        android:dependency="lockscreen_media_metadata"
         android:persistent="false" />
     </PreferenceCategory>
 
