Blissify: refactor lockscreen media artwork blur level
* during aosp r_9 rebase the base channge for the same was changed to one in havoc,
thus change this accordingly!

base: https://github.com/BlissRoms/platform_frameworks_base/commit/131ae71ed22b8b568bee23194f4784e827f276cf
corresponding change : https://github.com/Havoc-OS/android_packages_apps_ConfigCenter/commit/b5023d842e3aae8609562512af71a4517464cc51

Change-Id: I7a49c46164e5ba87e08f4356bfaad0d48ebf9308

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -116,14 +116,17 @@
         android:title="@string/lockscreen_media_art_title"
         android:defaultValue="true" />
 
-    <com.bliss.support.preferences.CustomSeekBarPreference
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
         android:key="lockscreen_media_blur"
         android:icon="@drawable/ic_media_art_blur"
         android:title="@string/lockscreen_media_blur_title"
         android:summary="@string/lockscreen_media_blur_summary"
-        android:max="2500"
-        settings:min="1"
-        android:persistent="false" />
+        android:max="100"
+        settings:min="5"
+        settings:units="%"
+        settings:interval="5"
+        android:defaultValue="100"
+        android:dependency="lockscreen_media_metadata" />
     </PreferenceCategory>
 
     <PreferenceCategory
