Bring back Gaming mode [3/3]
Change-Id: I69e93a66a668765f1f85d39bcc6882305cb1b8e1
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -17,6 +17,19 @@
     android:key="misc_settings"
     android:title="@string/blissify_misc_title">
 
+    <!-- Gaming Mode -->
+    <PreferenceCategory
+        android:key="gaming_mode_category"
+        android:title="@string/gaming_mode_title" >
+
+    <Preference
+        android:key="gaming_mode"
+        android:title="@string/gaming_mode_title"
+        android:summary="@string/gaming_mode_summary"
+        android:fragment="com.blissroms.blissify.fragments.misc.GamingMode"/>
+
+    </PreferenceCategory>
+
     <!-- Wakelock blocker -->
     <PreferenceCategory
         android:key="wakelock_blocker_category"
