Clean up some duplicates and do a little re-arranging
Change-Id: I8f8d9b4d5356713778f9bfedd65dfd45d0128d84

--- a/res/xml/batterybar_settings.xml
+++ b/res/xml/batterybar_settings.xml
@@ -36,7 +36,7 @@
         android:defaultValue="2"
         android:max="4"
         settings:min="1"
-        settings:units="@string/unit_pixels"
+        settings:units="dp"
         android:dependency="statusbar_battery_bar" />
 
     <com.bliss.support.preferences.SystemSettingListPreference
