--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -16,6 +16,11 @@
     android:title="@string/animation_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <!-- Bliss Header -->
+    <Preference 
+        android:key="bliss_header"
+        android:layout="@layout/animation_header" />
+
     <PreferenceScreen
         android:key="system_animation"
         android:title="@string/system_animation_title"
