--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -24,66 +24,13 @@
         android:key="bliss_header"
         android:layout="@layout/statusbar_header" />
 
-    <lineageos.preference.LineageSystemSettingListPreference
-        android:key="qs_quick_pulldown"
-        android:title="@string/status_bar_quick_qs_pulldown_title"
-        android:entries="@array/status_bar_quick_qs_pulldown_entries"
-        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
-        android:defaultValue="0" />
-
-<!--    <PreferenceScreen
-        android:fragment="com.blissroms.blissify.fragments.statusbar.NetworkTrafficSettings"
-        android:key="network_traffic_settings"
-        android:title="@string/network_traffic_settings_title"
-        android:summary="@string/network_traffic_settings_summary" /> -->
-
-        <PreferenceScreen
-            android:key="network_traffic_settings"
-            android:title="@string/network_traffic_settings_title"
-            android:summary="@string/network_traffic_settings_summary"
-            android:fragment="com.blissroms.blissify.fragments.statusbar.NetworkTrafficSettings" />
-
-        <Preference
-            android:key="batterybar_settings"
-            android:title="@string/battery_bar_title"
-            android:summary="@string/battery_bar_summary"
-            android:fragment="com.blissroms.blissify.fragments.statusbar.BatteryBar"
-            android:icon="@drawable/ic_battery_bar" />
-
-    <PreferenceCategory
-        android:title="@string/status_bar_icons_title">
-
-<!--
-        <lineageos.preference.LineageSystemSettingSwitchPreference
-            android:key="status_bar_notif_count"
-            android:title="@string/status_bar_notif_count_title"
-            android:summary="@string/status_bar_notif_count_summary"
-            android:defaultValue="true" />
--->
-
-        <PreferenceScreen
-            android:key="status_bar_icons"
-            android:icon="@drawable/ic_statusbar_icons"
-            android:title="@string/status_bar_system_icons_title"
-            android:summary="@string/status_bar_system_icons_summary">
-            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
-        </PreferenceScreen>
-
-      <Preference
-          android:key="advanced_icons"
-          android:title="@string/statusbar_advanced_icons"
-          android:fragment="com.blissroms.blissify.fragments.statusbar.AdvancedStatusbar"
-          android:icon="@drawable/ic_statusbar_icons" />
-
-    </PreferenceCategory>
-
     <PreferenceCategory
         android:key="status_bar_clock_key"
+        android:icon="@drawable/ic_clock"
         android:title="@string/status_bar_clock_title">
 
         <lineageos.preference.LineageSystemSettingListPreference
             android:key="status_bar_clock"
-            android:icon="@drawable/ic_clock"
             android:title="@string/status_bar_clock_position_title"
             android:summary="%s"
             android:dialogTitle="@string/status_bar_clock_position_title"
@@ -95,13 +42,13 @@
             android:key="clock"
             android:title="@string/status_bar_clock_title"
             android:summary="@string/status_bar_clock_summary"
-            android:fragment="com.blissroms.blissify.fragments.statusbar.Clock"
-            android:icon="@drawable/ic_clock" />
+            android:fragment="com.blissroms.blissify.fragments.statusbar.Clock" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="status_bar_battery_key"
+        android:icon="@drawable/ic_battery_bar"
         android:title="@string/status_bar_battery_title">
 
         <com.bliss.support.preferences.SystemSettingListPreference
@@ -126,24 +73,49 @@
             android:summary="@string/status_bar_battery_text_charging_summary"
             android:defaultValue="true" />
 
+        <Preference
+            android:key="batterybar_settings"
+            android:title="@string/battery_bar_title"
+            android:summary="@string/battery_bar_summary"
+            android:fragment="com.blissroms.blissify.fragments.statusbar.BatteryBar" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/status_bar_brightness_category">
+        android:title="@string/status_bar_icons_title"
+        android:icon="@drawable/ic_statusbar_icons">
 
-        <lineageos.preference.LineageSecureSettingSwitchPreference
-            android:key="qs_show_brightness_slider"
-            android:title="@string/status_bar_brightness_slider_title"
-            android:summary="@string/status_bar_brightness_slider_summary"
+<!--
+        <lineageos.preference.LineageSystemSettingSwitchPreference
+            android:key="status_bar_notif_count"
+            android:title="@string/status_bar_notif_count_title"
+            android:summary="@string/status_bar_notif_count_summary"
             android:defaultValue="true" />
+-->
 
-        <lineageos.preference.LineageSecureSettingSwitchPreference
-            android:key="qs_show_auto_brightness"
-            android:title="@string/status_bar_brightness_slider_auto_title"
-            android:summary="@string/status_bar_brightness_slider_auto_summary"
-            android:dependency="qs_show_brightness_slider"
-            lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
-            android:defaultValue="true" />
+        <PreferenceScreen
+            android:key="status_bar_icons"
+            android:title="@string/status_bar_system_icons_title"
+            android:summary="@string/status_bar_system_icons_summary">
+            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
+        </PreferenceScreen>
+
+      <Preference
+          android:key="advanced_icons"
+          android:title="@string/statusbar_advanced_icons"
+          android:fragment="com.blissroms.blissify.fragments.statusbar.AdvancedStatusbar" />
+
+      <PreferenceScreen
+          android:key="network_traffic_settings"
+          android:title="@string/network_traffic_settings_title"
+          android:summary="@string/network_traffic_settings_summary"
+          android:fragment="com.blissroms.blissify.fragments.statusbar.NetworkTrafficSettings" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/status_bar_brightness_category"
+        android:icon="@drawable/ic_blissify_misc">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="status_bar_brightness_control"
