--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -16,73 +16,96 @@
     android:title="@string/animation_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <PreferenceScreen
-        android:key="system_animation"
-        android:title="@string/system_animation_title"
-        android:summary="@string/system_animation_summary"
-        android:fragment="com.blissroms.blissify.fragments.animation.AnimationControls" />
+    <!-- Bliss Header -->
+    <Preference 
+        android:key="bliss_header"
+        android:layout="@layout/animation_header" />
 
-    <ListPreference
-        android:key="listview_animation"
-        android:dialogTitle="@string/listview_animation_title"
-        android:title="@string/listview_animation_title"
-        android:entries="@array/listview_animation_entries"
-        android:entryValues="@array/listview_animation_values"
-        android:defaultValue="0" />
+    <PreferenceCategory
+        android:title="@string/system_anim"
+        android:icon="@drawable/ic_blissify_animation">
 
-    <ListPreference
-        android:key="listview_interpolator"
-        android:dialogTitle="@string/listview_interpolator_title"
-        android:title="@string/listview_interpolator_title"
-        android:entries="@array/listview_interpolator_entries"
-        android:entryValues="@array/listview_interpolator_values"
-        android:defaultValue="0" />
+        <PreferenceScreen
+            android:key="system_animation"
+            android:title="@string/system_animation_title"
+            android:summary="@string/system_animation_summary"
+            android:fragment="com.blissroms.blissify.fragments.animation.AnimationControls" />
 
-    <ListPreference
-        android:key="toast_animation"
-        android:title="@string/toast_animation_title"
-        android:entries="@array/toast_animation_entries"
-        android:entryValues="@array/toast_animation_values"
-        android:defaultValue="1" />
+        <ListPreference
+            android:key="listview_animation"
+            android:dialogTitle="@string/listview_animation_title"
+            android:title="@string/listview_animation_title"
+            android:entries="@array/listview_animation_entries"
+            android:entryValues="@array/listview_animation_values"
+            android:defaultValue="0" />
 
-    <com.bliss.support.preferences.SystemSettingListPreference
-        android:key="anim_tile_style"
-        android:dialogTitle="@string/qs_tile_animation_style_title"
-        android:title="@string/qs_tile_animation_style_title"
-        android:entries="@array/qs_tile_animation_style_entries"
-        android:entryValues="@array/qs_tile_animation_style_values"
-        android:defaultValue="0" />
+        <ListPreference
+            android:key="listview_interpolator"
+            android:dialogTitle="@string/listview_interpolator_title"
+            android:title="@string/listview_interpolator_title"
+            android:entries="@array/listview_interpolator_entries"
+            android:entryValues="@array/listview_interpolator_values"
+            android:defaultValue="0" />
 
-    <com.bliss.support.preferences.SystemSettingListPreference
-        android:key="anim_tile_duration"
-        android:dialogTitle="@string/qs_tile_animation_duration_title"
-        android:title="@string/qs_tile_animation_duration_title"
-        android:entries="@array/qs_tile_animation_duration_entries"
-        android:entryValues="@array/qs_tile_animation_duration_values"
-        android:defaultValue="2000" />
+    </PreferenceCategory>
 
-    <com.bliss.support.preferences.SystemSettingListPreference
-        android:key="anim_tile_interpolator"
-        android:dialogTitle="@string/qs_tile_animation_interpolator_title"
-        android:title="@string/qs_tile_animation_interpolator_title"
-        android:entries="@array/qs_tile_animation_interpolator_entries"
-        android:entryValues="@array/qs_tile_animation_interpolator_values"
-        android:defaultValue="0" />
+        <ListPreference
+            android:key="toast_animation"
+            android:title="@string/toast_animation_title"
+            android:entries="@array/toast_animation_entries"
+            android:entryValues="@array/toast_animation_values"
+            android:defaultValue="1" />
 
-    <ListPreference
-        android:key="pref_scrollingcache"
-        android:dialogTitle="@string/pref_scrollingcache_title"
-        android:title="@string/pref_scrollingcache_title"
-        android:entries="@array/entries_scrollingcache"
-        android:entryValues="@array/values_scrollingcache"
-        android:defaultValue="1" />
+    <PreferenceCategory
+        android:title="@string/tile_anim"
+        android:icon="@drawable/ic_blissify_qs">
 
-    <ListPreference
-        android:key="screen_off_animation"
-        android:title="@string/screen_off_animation_title"
-        android:entries="@array/screen_off_animation_entries"
-        android:entryValues="@array/screen_off_animation_values"
-        android:persistent="false"
-        android:defaultValue="0" />
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="anim_tile_style"
+            android:dialogTitle="@string/qs_tile_animation_style_title"
+            android:title="@string/qs_tile_animation_style_title"
+            android:entries="@array/qs_tile_animation_style_entries"
+            android:entryValues="@array/qs_tile_animation_style_values"
+            android:defaultValue="0" />
+
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="anim_tile_duration"
+            android:dialogTitle="@string/qs_tile_animation_duration_title"
+            android:title="@string/qs_tile_animation_duration_title"
+            android:entries="@array/qs_tile_animation_duration_entries"
+            android:entryValues="@array/qs_tile_animation_duration_values"
+            android:defaultValue="2000" />
+
+        <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="anim_tile_interpolator"
+            android:dialogTitle="@string/qs_tile_animation_interpolator_title"
+            android:title="@string/qs_tile_animation_interpolator_title"
+            android:entries="@array/qs_tile_animation_interpolator_entries"
+            android:entryValues="@array/qs_tile_animation_interpolator_values"
+            android:defaultValue="0" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/misc_anim"
+        android:icon="@drawable/ic_blissify_misc">
+
+        <ListPreference
+            android:key="pref_scrollingcache"
+            android:dialogTitle="@string/pref_scrollingcache_title"
+            android:title="@string/pref_scrollingcache_title"
+            android:entries="@array/entries_scrollingcache"
+            android:entryValues="@array/values_scrollingcache"
+            android:defaultValue="1" />
+
+        <ListPreference
+            android:key="screen_off_animation"
+            android:title="@string/screen_off_animation_title"
+            android:entries="@array/screen_off_animation_entries"
+            android:entryValues="@array/screen_off_animation_values"
+            android:persistent="false"
+            android:defaultValue="0" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
