--- a/res/xml/lockscreen_visualizer.xml
+++ b/res/xml/lockscreen_visualizer.xml
@@ -16,6 +16,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/music_visualizer_title" >
 
+    <!-- Bliss Logo Header -->
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <com.bliss.support.preferences.SecureSettingSwitchPreference
         android:key="lockscreen_visualizer_enabled"
         android:title="@string/music_visualizer_title"
