--- a/res/xml/rounded_corners.xml
+++ b/res/xml/rounded_corners.xml
@@ -13,7 +13,14 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    android:key="rounded_corners"
+    android:title="@string/corners_title">
+
+    <!-- Bliss Logo Header -->
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
 
     <com.bliss.support.preferences.SecureSettingSwitchPreference
        android:key="sysui_rounded_fwvals"
