--- a/res/xml/status_bar_clock.xml
+++ b/res/xml/status_bar_clock.xml
@@ -19,6 +19,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <!-- Bliss Logo Header -->
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="status_bar_clock_auto_hide"
         android:title="@string/status_bar_clock_auto_hide_title"
