--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -15,16 +15,23 @@
     android:key="advanced_icons"
     android:title="@string/statusbar_advanced_icons">
 
+    <!-- Bliss Logo Header -->
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <!-- Status bar bliss logo -->
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="status_bar_logo"
             android:title="@string/status_bar_bliss_logo_title"
             android:summary="@string/status_bar_bliss_logo_summary" />
+
         <com.bliss.support.colorpicker.ColorPickerPreference
             android:key="status_bar_logo_color"
             android:title="@string/status_bar_bliss_logo_color"
             android:defaultValue="0xffffffff"
             android:dependency="status_bar_logo" />
+
        <com.bliss.support.preferences.SystemSettingListPreference
             android:key="status_bar_logo_position"
             android:title="@string/status_bar_bliss_logo_position"
@@ -33,6 +40,7 @@
             android:entryValues="@array/status_bar_logo_position_values"
             android:defaultValue="0"
             android:dependency="status_bar_logo" />
+
        <com.bliss.support.preferences.SystemSettingListPreference
             android:key="status_bar_logo_style"
             android:title="@string/status_bar_bliss_logo_style"
