--- a/res/xml/volume_panel.xml
+++ b/res/xml/volume_panel.xml
@@ -19,6 +19,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/audio_panel_view_title">
 
+    <!-- Bliss Logo Header -->
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <com.bliss.support.preferences.SystemSettingSeekBarPreference
         android:key="audio_panel_view_timeout"
         android:title="@string/audio_panel_view_timeout_title"
