--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -276,11 +276,11 @@
         android:key="lockscreen_media_blur"
         android:title="@string/lockscreen_media_blur_title"
         android:summary="@string/lockscreen_media_blur_summary"
-        android:max="2500"
-        settings:min="1"
         android:dependency="lockscreen_media_metadata"
-        android:persistent="false" />
-
+        android:max="25"
+        android:min="0"
+        android:defaultValue="25"
+        settings:units="dp"/>
     </PreferenceCategory>
 
     <!-- Lockscreen Visualizer -->
