--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -255,8 +255,10 @@
         android:key="lockscreen_media_blur"
         android:title="@string/lockscreen_media_blur_title"
         android:summary="@string/lockscreen_media_blur_summary"
-        android:max="2500"
-        settings:min="1"
+        android:max="25"
+        settings:min="0"
+        settings:interval="1"
+        android:defaultValue="12"
         android:dependency="lockscreen_media_metadata"
         android:persistent="false" />
 
