--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -140,4 +140,17 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="lockscreen_weather_category"
+        android:icon="@drawable/ic_weather"
+        android:title="@string/lock_screen_weather_category" >
+
+        <PreferenceScreen
+            android:key="weather_option"
+            android:title="@string/weather_title"
+            android:summary="@string/weather_config_title"
+            android:fragment="com.blissroms.blissify.fragments.lockscreen.Weather" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
