--- a/res/xml/weather.xml
+++ b/res/xml/weather.xml
@@ -22,6 +22,11 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/weather_title">
 
+    <!-- Bliss Logo Header -->
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <PreferenceScreen
         android:title="@string/weather_config_title"
         android:summary="@string/weather_config_summary" >
@@ -46,6 +51,14 @@
             android:summaryOn="@string/lock_screen_show_weather_summaryOn"
             android:summaryOff="@string/lock_screen_show_weather_summaryOff"
             android:defaultValue="false" />
+
+       <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_weather_style"
+            android:title="@string/lock_screen_weather_style_title"
+            android:summaryOn="@string/lock_screen_weather_style_summaryOn"
+            android:summaryOff="@string/lock_screen_weather_style_summaryOff"
+            android:defaultValue="false"
+            android:dependency="lockscreen_weather_enabled" />
 
     </PreferenceCategory>
 </PreferenceScreen>
