Fix navbar inverse layout switch
Change-Id: I0ecde864421b0ad7c11390740b2c4e9c58311b36

--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -43,15 +43,15 @@
         android:title="@string/navigation_bar_category" >
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
-                android:key="navigation_bar_menu_arrow_keys"
-                android:title="@string/navigation_bar_arrow_keys_title"
-                android:summary="@string/navigation_bar_arrow_keys_summary"
-                android:defaultValue="false" />
+            android:key="navigation_bar_menu_arrow_keys"
+            android:title="@string/navigation_bar_arrow_keys_title"
+            android:summary="@string/navigation_bar_arrow_keys_summary"
+            android:defaultValue="false" />
 
-        <lineageos.preference.SecureSettingSwitchPreference
-                android:key="sysui_nav_bar_inverse"
-                android:title="@string/navigation_bar_invert_layout_title"
-                android:defaultValue="false" />
+       <com.bliss.support.preferences.SecureSettingSwitchPreference
+            android:key="navbar_inverse_layout"
+            android:title="@string/navigation_bar_invert_layout_title"
+            android:defaultValue="false" />
 
         <ListPreference
             android:key="navigation_home_long_press"
