Blissify: Max Lockscreen Notification count [2/2]
Change-Id: I555417147d9d685292cc9bf5f4adab2d8a295c0f
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -878,4 +878,11 @@
     <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
     <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
 
+    <!-- Custom lockscreen notifications count -->
+    <string name="lockscreen_notifications_category">Lockscreen Notifications</string>
+    <string name="lock_screen_custom_notif_title">Custom notifications count</string>
+    <string name="lock_screen_custom_notif_summary">Toggle to enable setting max notifications count on lockscreen</string>
+    <string name="lockscreen_max_notif_config_title">Maximum number of notifications</string>
+    <string name="lockscreen_max_notif_config_summary">Control the maximum number of expanded notifications to show on lockscreen</string>
+
 </resources>
