--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -56,6 +56,27 @@
             settings:defaultColorValue="0xFF3980FF" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="lockscreen_notifications_category"
+        android:title="@string/lockscreen_notifications_category" >
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="lock_screen_custom_notif"
+        android:title="@string/lock_screen_custom_notif_title"
+        android:summary="@string/lock_screen_custom_notif_summary"
+        android:defaultValue="false" />
+
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="lockscreen_max_notif_config"
+        android:title="@string/lockscreen_max_notif_config_title"
+        android:summary="@string/lockscreen_max_notif_config_summary"
+        android:max="3"
+        android:min="1"
+        android:defaultValue="3"
+        android:dependency="lock_screen_custom_notif" />
+
+    </PreferenceCategory>
+
   <PreferenceCategory
         android:title="@string/breathing_notifications_category" >
 
