--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -76,6 +76,15 @@
 
     </PreferenceCategory>
 
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="qs_panel_bg_alpha"
+            android:title="@string/qs_panel_alpha_title"
+            android:summary="@string/qs_panel_alpha_summary"
+            android:max="255"
+            settings:min="0"
+            android:defaultValue="255"
+            settings:units="%" />
+
     <PreferenceCategory
         android:title="@string/tile_options"
         android:icon="@drawable/ic_blissify_qs">
