--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -108,6 +108,12 @@
         android:title="@string/qs_footer_title" >
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="footer_text_show"
+            android:title="@string/footer_text_show_title"
+            android:summary="@string/footer_text_show_summary"
+            android:defaultValue="false" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="qs_footer_show_settings"
             android:title="@string/qs_footer_settings_title"
             android:summary="@string/qs_footer_settings_summary"
