--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -48,6 +48,12 @@
         android:key="notification_screen"
         android:title="@string/notification_screen_title" >
 
+        <!-- Preview -->
+        <com.blissroms.blissify.fragments.notifications.AmbientLightSettingsPreview
+            android:key="ambientlight_preview"
+            android:layout="@layout/ambient_light"
+            android:selectable="false"/>
+
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="pulse_ambient_light"
             android:title="@string/pulse_ambient_light_title"
