add toggle for notifications smart reply [2/2]
Change-Id: I7ad07da6072dae84b7852df77eec898b6c7c3ecf
Signed-off-by: 00day0 <therandomuser11@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -986,4 +986,8 @@
     <string name="fod_icon_picker_title">FOD icon picker</string>
     <string name="fod_icon_picker_summary">Pick your favourite fingerprint icon</string>
 
+    <!-- Smart replies -->
+    <string name="hide_smart_replies_title">Hide smart replies</string>
+    <string name="hide_smart_replies_summary">Hide smart replies to save screen space with peeking notifications</string>
+
 </resources>
