Blissify: Brightness QS: Make +- buttons optional
Change-Id: If44876db1215159bd1d9168a8177363884f63ce1

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -860,4 +860,8 @@
     <string name="hide_from_recents_add_app">Add app</string>
     <string name="title_activity_carbon_recents_settings">Recents</string>
 
+    <!-- Brightness buttons -->
+    <string name="qs_show_brightness_buttons_title">Brightness control buttons</string>
+    <string name="qs_show_brightness_buttons_summary">Show buttons beside the brightness slider to adjust brightness</string>
+
 </resources>
