--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -141,6 +141,12 @@
             lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
             android:defaultValue="true" />
 
+        <com.bliss.support.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_brightness_buttons"
+            android:title="@string/qs_show_brightness_buttons_title"
+            android:summary="@string/qs_show_brightness_buttons_summary"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
     <!-- QS clock -->
