FOD icon picker [2/2]
* Add a footer to explain how users can add their own icons

BlissRoms : use Lineage fod check

Co-authored-by: Stallix <thestallix@gmail.com>
Co-authored-by: rohan <purohit.rohan@gmail.com>
Change-Id: I1924335bec99cdb4ed999ec81baf1b4dc2998527

--- a/res/values/bliss_colors.xml
+++ b/res/values/bliss_colors.xml
@@ -20,5 +20,6 @@
     <color name="blissify_logo_color">#3e93cc</color>
     <color name="ambient_light_screen_color">#111111</color>
     <color name="ambient_light_body_color">#323232</color>
+    <color name="fod_item_background_stroke_color">#d6d6d6</color>
 
 </resources>
