--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -49,6 +49,19 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="fod_icon_picker"
+        android:title="@string/fod_icon_picker_title" >
+
+        <!-- FOD icon picker -->
+        <Preference
+            android:key="fod_icon_picker_category"
+            android:title="@string/fod_icon_picker_title"
+            android:summary="@string/fod_icon_picker_summary"
+            android:fragment="com.blissroms.blissify.fragments.lockscreen.FODIconPickerFragment" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="lockscreen_charging_category"
         android:title="@string/lockscreen_charging_category" >
 
