FOD icon picker [2/2]
TODO: use lineage fod check
Change-Id: I1924335bec99cdb4ed999ec81baf1b4dc2998527
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -982,4 +982,8 @@
     <string name="enable_clear_all_button">Replace clear all text with nice button</string>
     <string name="enable_clear_all_button_summary">Show clear all notifications button in quick settings instead of default text one</string>
 
+    <!-- FOD icon picker -->
+    <string name="fod_icon_picker_title">FOD icon picker</string>
+    <string name="fod_icon_picker_summary">Pick your favourite fingerprint icon</string>
+
 </resources>
