--- a/res/values/bliss_colors.xml
+++ b/res/values/bliss_colors.xml
@@ -19,5 +19,6 @@
 
     <color name="ambient_light_screen_color">#111111</color>
     <color name="ambient_light_body_color">#323232</color>
+    <color name="fod_item_background_stroke_color">#d6d6d6</color>
 
 </resources>
