Blissify: Motion Sense [2/2]
Co-authored-by: Nicolas Dhouailly <ndhouailly@gmail.com>
Change-Id: I1bdf7431610ca4cb8e715f383fc92761a947ae2c

--- a/res/xml/blissify_pixel_gestures.xml
+++ b/res/xml/blissify_pixel_gestures.xml
@@ -15,4 +15,10 @@
     android:key="gestures_settings"
     android:title="@string/blissify_pixel_gestures_title">
 
+    <com.google.android.settings.aware.AwareSettingsDialogPreference
+        android:key="aware_settings"
+        android:icon="@drawable/ic_bliss_aware"
+        android:title="@string/aware_settings_title"
+        android:summary="@string/aware_settings_summary" />
+
 </PreferenceScreen>
