--- a/res/values/bliss_ids.xml
+++ b/res/values/bliss_ids.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2014-2020 BlissRoms Project
+<!--
+     Copyright (C) 2014-2020 The BlissRoms Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,12 +14,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Whether to display pixel gestures category -->
-    <bool name="is_pixel_device">false</bool>
-
-    <!-- Whether to display aware category -->
-    <bool name="has_aware">false</bool>
-
+    <item type="id" name="info_button" />
+  
 </resources>
