Blissify: Optional screenshot type [2/2]
Change-Id: I0fe2a7c0037262ffa5bceca424b207638cda8d71

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -893,4 +893,9 @@
     <string name="force_expanded_notifications_title">Force expanded notifications</string>
     <string name="force_expanded_notifications_summary">Force apps that support expanded notifications</string>
 
+    <!-- Screenshot -->
+    <string name="screenshot_type_title">Screenshot type</string>
+    <string name="screenshot_type_fullscreen">Full</string>
+    <string name="screenshot_type_partial">Partial</string>
+
 </resources>
