--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -154,7 +154,14 @@
         android:icon="@drawable/ic_force_close_notifications"
         android:title="@string/enable_fc_notifications_title" 
         android:summary="@string/enable_fc_notifications_summary" 
-        android:defaultValue="true" /> 
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="screenshot_type"
+        android:title="@string/screenshot_type_title"
+        android:entries="@array/screenshot_type_entries"
+        android:entryValues="@array/screenshot_type_values"
+        android:defaultValue="0" />
 
     </PreferenceCategory>
 
