Blissify: Add option to hide status area on lock screen [2/2]
Change-Id: Ic9e9751f9364ba967a7cf431d3018a48b3336396

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -43,6 +43,19 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="lockscreen_content_category"
+        android:title="@string/lockscreen_display_category" >
+
+       <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_date_display"
+            android:title="@string/lockscreen_date_title"
+            android:summaryOn="@string/lockscreen_date_summaryOn"
+            android:summaryOff="@string/lockscreen_date_summaryOff"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="lockscreen_charging_category"
         android:title="@string/lockscreen_charging_category" >
 
